[metadata]
name = onesignal-sdk
version = attr: onesignal_sdk.__version__
description = A Python wrapper around the OneSignal API
long_description = file: README.rst
url = https://github.com/zeyneloz/onesignal_sdk
author = Zeynel Ozdemir
author_email = ozdemir.zynl@gmail.com
license = MIT
keywords =
    onesignal
    one-signal
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
install_requires =
    httpx>=0.1

[tool:pytest]
minversion = 5.0
testpaths =
    tests

[coverage:run]
branch = True
source = onesignal_sdk
omit = onesignal_sdk/constants.py

[flake8]
max-line-length = 119
exclude = build,.git,.tox,venv,__pycache__,dist
max-complexity = 12

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 88
multi_line_output = 5